feat: refactor role and permission service